--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   AggregationApp.api:
-    image: ${DOCKER_REGISTRY-}todolistapi
+    image: ${DOCKER_REGISTRY-}aggregationapi
     build:
       context: .
       dockerfile: src/AggregationApp.API/Dockerfile
@@ -10,13 +10,13 @@ services:
       - "5000:80"
     depends_on:
       - mysql
- 
+
   mysql:
     image: mysql:latest
     container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: my-secret-pw
-      MYSQL_DATABASE: todo_db
+      MYSQL_DATABASE: aggregation_db
     ports:
       - "3307:3306"
     volumes:
