--- a/test/TodoList.Domain.UnitTests/TodoList.Domain.UnitTests.csproj
+++ b/test/TodoList.Domain.UnitTests/TodoList.Domain.UnitTests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="TodoItems\" />
+    <Folder Include="Apartments\" />
   </ItemGroup>
 
   <ItemGroup>
